--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -135,7 +135,7 @@
                             <p class="text-body-base">outbound messages for Airbnb bookings instructed the guest to reach out to the owner, forcing guests to do the resolution work</p>
                         </div>
                         <div class="metrics-item">
-                            <h2 class="text-heading-2">7h–24h</h2>
+                            <h2 class="text-heading-2">7h+</h2>
                             <p class="text-body-base">response time for frontline teams to get the resolution to send back to the guest</p>
                         </div>
                         <div class="metrics-item">
@@ -150,7 +150,7 @@
         <section class="metrics-images">
             <div class="container">
                 <div class="metrics-image">
-                    <p class="text-body-base-bold metrics-caption">Current communication flow chart, noting which mode of communication was used and by which user</p>
+                    <p class="text-body-base-bold metrics-caption">Current communication flow chart, demonstrating the broken communication system</p>
                     <div class="metrics-placeholder">
                         <img src="assets/evolve_inbox_current_flow.svg" alt="Current communication flow chart" />
                     </div>
@@ -166,7 +166,8 @@
                     <p class="text-body-base">First, I needed to understand how our owners were currently communicating. Second, I needed to uncover opportunities that I could leverage to build a tool they would use. I led a research-first approach combining:</p>
                     <ul>
                         <li class="text-body-base"><span class="text-body-base-bold">Owner feedback:</span> Mined NPS feedback and in-app feedback to surface recurring pain points, looking specifically at feedback mentioning “communication”.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Launched user surveys:</span> I developed an initial set of questions and goals and reviewed with my PM and Researcher. I wanted to better understand their current behaviors and expectations of responsibility by booking phase.</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">User surveys:</span> I developed an initial set of questions and goals and reviewed with my PM and researcher. I wanted to better understand their current behaviors and expectations of communicationresponsibility by booking phase.</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Empathy storming:</span> I led an empathy storming session with the team to understand the potential positive and negative sentiments toward a new communication tool. This was based off of user feedback from the surveys.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">AI + Design:</span> Used ChatGPT to analyze thousands of lines of owner feedback, cluster themes, and identify root causes behind service breakdowns, user dissatisfaction, and pain points.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Current state analysis:</span> Mapped out current flow and process, and interviewed internal stakeholders to understand frontline team issues, needs, and process gaps. Created a user journey map with insights pulled from our survey, NPS feedback, and any frontline team feedback.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Data insights:</span> Identified >20K off-platform messages exchanged across 23K reservations, showing the scale of fragmented communication. We also analyzed the timing of the inbound messages in each booking phase to inform changes in the product strategy.</li>
@@ -251,8 +252,8 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Solution</h3>
-                    <p class="text-body-base">We needed to release quickly and gather learnings right away. We decided on a beta release focusing on Inbox for partner Airbnb bookings only. My key design questions were:</p>
-                    <p class="text-body-base"><span style="color: var(--color-fire-500);">How could we give guests direct access to owners when needed and allow owners to address booking requests on their own—without delays or bottlenecks?</span> I needed to build a seamless, transparent communication platform that let owners manage interactions and give guests a smooth experience, while making it clear which user was handling which request.</p>
+                    <p class="text-body-base">We needed to release quickly and gather learnings right away. We decided on a beta release focusing on Inbox for partner Airbnb bookings only. My solutions to the key design questions were:</p>
+                    <p class="text-body-base"><span style="color: var(--color-fire-500);">How could we give guests direct access to owners when needed and allow owners to address booking requests on their own—without delays or bottlenecks?</span> I needed to build an intuitive communication platform that decreased time to respond to guest requests and enhanced our current notification system.</p>
                     <p class="text-body-base"><span style="color: var(--color-fire-500);">How might we reframe success so owners see messaging as essential to rental performance?</span> Integrated education into UI and marketing, positioning Inbox as a core management tool to boost efficiency and engagement.</p>
                     <p class="text-body-base">In addition to that, discovery showed most guest requests came 4–7 days pre-check-in, a critical window for connection. Rather than granting access only after check-in, I proposed opening messaging earlier to drive adoption and reduce issues. The team was on board with this idea and we adjusted the roadmap.</p>
                     <p class="text-body-base">I then defined our success metrics with my PM:</p>
@@ -262,7 +263,7 @@
                         <li class="text-body-base"><span class="text-body-base-bold">Frontline teams:</span> Lower service costs, fewer escalations, greater transparency.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Business:</span> Higher NPS, improved response time, stronger review trends.</li>
                     </ul>
-                    <p class="text-body-base">I started with mockups and an initial beta flow. I then created a user journey map to build empathy for the user. Once I presented the general design direction to the team, I worked with the Researcher to test the initial designs with users. We found in testing that our users thought the design was user-friendly and easy to understand.</p>
+                    <p class="text-body-base">I started with mockups and an initial beta flow. I then created a user journey map to build empathy for the user. Once I presented the general design direction to the team, I worked with the researcher to test the initial designs with users. We found in testing that our users thought the design was user-friendly and easy to understand.</p>
                 </div>
                 <div class="metrics-right">
                     <div class="metrics-list">
@@ -303,7 +304,7 @@
         <section id="journey-map" class="solution-images">
             <div class="container">
                 <div class="solution-image">
-                    <p class="text-body-base-bold solution-caption">Created a user journey map to bulid empathy for the user</p>
+                    <p class="text-body-base-bold solution-caption">Created a user journey map to guide every decision in the process</p>
                     <div class="solution-placeholder">
                         <img src="assets/evolve_inbox_journey_map.svg" alt="User journey" />
                     </div>
@@ -334,7 +335,7 @@
                 <div class="solution-image">
                     <p class="text-body-base-bold solution-caption">Final designs for the beta release</p>
                     <div class="solution-placeholder">
-                        <img src="assets/evolve_inbox_beta_designs.svg" alt="Final designs for beta" data-zoomable />
+                        <img src="assets/evolve_inbox_beta_designs.svg" alt="Final designs for beta" />
                     </div>
                 </div>
             <div class="design-cta">
@@ -356,7 +357,7 @@
                 <div class="solution-image">
                     <p class="text-body-base-bold solution-caption">Concepts for Inbox</p>
                     <div class="solution-placeholder">
-                        <img src="assets/evolve_inbox_concepts.svg" alt="Concepts for Inbox" data-zoomable />
+                        <img src="assets/evolve_inbox_concepts.svg" alt="Concepts for Inbox" />
                     </div>
                 </div>
                 <div class="design-cta">
@@ -384,7 +385,7 @@
                 <div class="stats-row">
                     <div class="stats-item">
                         <h2 class="text-heading-2">&lt;30m</h2>
-                        <p class="text-body-base">84% responded within this time</p>
+                        <p class="text-body-base">84% of the beta owenrs responded within this time</p>
                     </div>
                     <div class="stats-item">
                         <h2 class="text-heading-2">+1.9</h2>
@@ -408,8 +409,8 @@
                 <div class="metrics-left">
                     <p class="text-body-base-bold">Opportunities I noted</p>
                     <ul>
-                        <li class="text-body-base">Inbox usage dropped 35% during a certain period. We hypothesized that certain owners or guests were disengaged or the interaction didn't require a response. How could we better educate the user that increased owner engagement could increase positive guest reviews?</li>
-                        <li class="text-body-base">We didn’t notice a measurable shift in NPS scores around communication, only a 0.5pt increase in a 30-day analysis. We believe it was due to our beta group being relatively small. How could we increase NPS around communication in future iterations?</li>
+                        <li class="text-body-base">Inbox usage dropped 35% during a certain period. We hypothesized that certain owners or guests were disengaged or the interaction didn't require a response. Would educating the users that any engagement regardless of request was good?</li>
+                        <li class="text-body-base">We didn’t notice a measurable shift in NPS scores around communication, only a 1.9pt increase. We believe it was due to our beta group being relatively small. How could we increase NPS around communication in future iterations?</li>
                     </ul>
                 </div>
             </div>
