--- a/evolve-owner-account.html
+++ b/evolve-owner-account.html
@@ -67,21 +67,21 @@
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Problem</h3>
-                        <p class="text-body-base">The Owner Account (OA) was outdated, fragmented, and difficult to use. Over 30k owners relied on it weekly, if not daily. Built on Salesforce Communities, which meant it was hard to scale and customize, and the legacy experience broke accessibility standards, used clunky flows that often led to dead ends, and forced owners to call support for basic tasks. This eroded trust and created major inefficiencies. Compared to competitors like Airbnb and Vrbo, Evolve’s OA felt opaque and unsupportive, leaving owners disempowered. To move forward, we needed a modern platform, a stronger research foundation, and a scalable design that rebuilt trust and put owners back in control.</p>
+                        <p class="text-body-base">The Owner Account (OA) was outdated, fragmented, and difficult to use. Over 30k owners relied on it weekly, if not daily. Built on Salesforce Communities, which meant it was hard to scale and customize, and the legacy experience broke accessibility standards, used clunky flows that often led to dead ends, and forced owners to call support for basic tasks. This eroded trust and created major inefficiencies. Compared to competitors like Airbnb and Vrbo, Evolve’s OA felt opaque, so to speak, leaving owners disempowered. To move forward, we needed a modern platform, a stronger research foundation, and a scalable design that rebuilt trust and put owners back in control. This was originally a 1:1 feature parity project.</p>
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Solution</h3>
-                        <p class="text-body-base">I partnered with another designer to redesign the Owner Account (OA) on a modern platform with a new design system, refreshed branding, and improved information architecture. I unified web and mobile, prioritized self-serve features, and removed frustrating dead ends. We rolled out iteratively—starting with mobile, where ~56% of users were active—while keeping the legacy platform live to ease adoption. I conducted continuous usability testing with our researcher to ground decisions in data, partnered with content marketing on new guidelines, and designed micro-interactions that made the experience feel polished.</p>
+                        <p class="text-body-base">I partnered with another designer to redesign the Owner Account (OA) on a modern platform with a new design system, refreshed branding, and improved information architecture. I unified web and mobile, prioritized self-serve features, and removed frustrating dead ends. We rolled out iteratively—starting with mobile, where ~56% of users were active—while keeping the legacy platform live to ease adoption. I conducted continuous usability testing with our researcher to ground decisions in data, partnered with content marketing on new Owner Accountguidelines, and designed micro-interactions that made the experience feel polished.</p>
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Impact</h3>
-                        <p class="text-body-base">The redesign significantly boosted satisfaction and usability. Nearly 90% of owners rated the new experience as extremely user-friendly, often calling out the cleaner layout and streamlined navigation as major improvements over legacy. Repeat bug reports dropped by ~30%, and support calls for legacy issues declined as well.</p>
+                        <p class="text-body-base">The redesign significantly boosted satisfaction and usability. Nearly 90% of owners rated the new experience as extremely user-friendly, often calling out the cleaner layout and streamlined navigation as major improvements over legacy. Repeat bug reports dropped by ~30% and support calls for legacy issues declined as well.</p>
                     </div>
                 </div>
                 <div class="case-details">
                     <div class="detail-section">
                         <h4 class="text-body-large">Role</h4>
-                        <p class="text-body-base">1 of 2 lead designers</p>
+                        <p class="text-body-base">1 of 2 designers</p>
                     </div>
                     <div class="detail-section">
                         <h4 class="text-body-large">Team</h4>
@@ -138,7 +138,7 @@
         <section class="discovery-images">
             <div class="container">
                 <div class="discovery-image">
-                    <p class="text-body-base-bold discovery-caption">Legacy OA experience</p>
+                    <p class="text-body-base-bold discovery-caption">Reviewing the legacy OA experience</p>
                     <div class="discovery-placeholder">
                         <img src="assets/evolve_oa_legacy.png" alt="Legacy OA experience" />
                     </div>
@@ -151,13 +151,13 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Discovery</h3>
-                    <p class="text-body-base">To understand what problems we needed to solve in a feature-parity project, I partnered with our researcher on a qualitative and quantitative deep dive.</p>
+                    <p class="text-body-base">To understand what problems we needed to solve, I partnered with our researcher on a qualitative and quantitative deep dive.</p>
                     <ul>
-                        <li class="text-body-base"><span class="text-body-base-bold">Defining key personas:</span> First-time Renters, FRBOs, Investors, and Hands-on Hosts—making sure my designs reflected our diverse user needs.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Digging for user insight:</span> I collaborated with our researcher to conduct interviews and surveys to understand what was working and what wasn’t. </li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Analyzing the UX and UI:</span> I uncovered pain points like confusing flows, accessibility issues, and lack of responsiveness.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Digging into our data on Salesforce:</span> I wanted to better understand what our technical contraints were in order to make important improvements for mvp.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Wireframing:</span> I created quick wires to guide the team in strategy discussions.</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Defined key personas:</span> First-time Renters, FRBOs, Investors, and Hands-on Hosts—making sure my designs reflected our diverse user needs.</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Dug into for user insight:</span> I collaborated with our researcher to conduct interviews and surveys to understand what was working and what wasn’t. </li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Analyzed the UX and UI:</span> I uncovered pain points like confusing flows, accessibility issues, and lack of responsiveness.</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Dove into our data on Salesforce:</span> I wanted to better understand what our technical contraints were in order to make important improvements for mvp.</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Wireframes:</span> I created quick wires to guide the team in strategy discussions.</li>
                     </ul>
                     <p class="text-body-base">By time-boxing research to 1–2 weeks per phase, I kept momentum and stayed lean while grounding my design decisions in data.</p>
                 </div>
@@ -168,12 +168,16 @@
                             <p class="text-body-base">Varied; we time boxed research to 1-2 weeks, including synthesis</p>
                         </div>
                         <div class="metrics-item">
+                            <p class="text-body-base-bold"><span style="color: var(--color-grey);">Participants</span></p>
+                            <p class="text-body-base">Owners in our research panel, In-house owners</p>
+                        </div>
+                        <div class="metrics-item">
                             <p class="text-body-base-bold"><span style="color: var(--color-grey);">Total features analyzed</span></p>
                             <p class="text-body-base">19+ features on both web and app</p>
                         </div>
                         <div class="metrics-item">
                             <p class="text-body-base-bold"><span style="color: var(--color-grey);">Tools</span></p>
-                            <p class="text-body-base">UserTesting, Chattermill, NPS surveys, Zoom, In-house owners</p>
+                            <p class="text-body-base">UserTesting, Chattermill, NPS surveys, Zoom</p>
                         </div>
                     </div>
                 </div>
@@ -183,7 +187,7 @@
         <!-- Personas section with fire-50 background (below impact-next) -->
         <section class="discovery-images" id="personas" style="background: var(--color-fire-50); padding-top: var(--space-64); padding-bottom: var(--space-64); min-height: 100vh; display: grid; place-items: center;">
             <div class="container">
-                <p class="text-body-base-bold discovery-caption">Created personas with our researcher and used these to guide every feature redesign</p>
+                <p class="text-body-base-bold discovery-caption">Used personas to guide every feature redesign from UI to IA</p>
                 <div class="personas-grid">
                     <div class="persona-item">
                         <img src="assets/evolve_oa_persona_FTR.png" alt="First-time renters" />
@@ -246,7 +250,7 @@
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Solution</h3>
                     <p class="text-body-base">Our ultimate goal with the redesign was 1:1 feature parity, but I also saw it as a chance to make meaningful UX improvements without ballooning scope or timelines. It meant I had to stay lean and creative.</p>
-                    <p class="text-body-base">Looking back, delivering a full web and app redesign felt like orchestrating a smorgasbord of methods, workflows, and responsibilities. My work included:</p>
+                    <p class="text-body-base">Looking back, delivering a full web and app redesign felt like orchestrating a smorgasbord of methods, workflows, and responsibilities. I defined the solutions by:</p>
                     <ul>
                         <li class="text-body-base"><span class="text-body-base-bold">Redefining the foundation:</span> I audited the legacy IA, combined findings with research insights, and redesigned navigation across app and web to better support user goals.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Mapping end-to-end journeys:</span> This helped me identify expectations we weren’t meeting and pinpoint where creative design could make the biggest impact within our constraints. I also documented the communication received at each phase in the user's journey.</li>
@@ -297,7 +301,7 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Designs</h3>
-                    <p class="text-body-base">To reach parity, I redesigned 19+ features across web and app. All web designs were responsive for desktop, tablet, and mobile breakpoints. Here's a sample of screens (some screens shown here were designed in collaboration with my co-designer):</p>
+                    <p class="text-body-base">To reach parity, we redesigned 19+ features across web and app. All web designs were responsive for desktop, tablet, and mobile breakpoints. Here's a sample of screens (some screens shown here were designed in collaboration with my co-designer):</p>
                 </div>
                 
             </div>
@@ -336,7 +340,7 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">What impact did we have?</h3>
-                    <p class="text-body-base">The release of the new web and app experience happened iteratively and was met with positivity from our users. ~95% of our users said the new experience was very user-friendly and that the new look was pleasing!</p>
+                    <p class="text-body-base">The release of the new web and app experience happened iteratively and was met with positivity from our users. ~95% of our users said the new experience was very user-friendly and that the new look was pleasing 🎉</p>
                     <p class="text-body-base">Launching the new Owner Account experience on the new platform was a huge feat. This allowed our entire product team to move faster with any net new features.</p>    
                 </div>
             </div>
