--- a/evolve-self-serve-cancellations.html
+++ b/evolve-self-serve-cancellations.html
@@ -71,11 +71,11 @@
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Solution</h3>
-                        <p class="text-body-base">I designed a self-serve cancellation flow for the responsive web Owner Account experience. Since booking cancellation rules differ across distribution partners like Airbnb and Vrbo, the solution needed to balance clarity, guidance, and compliance. The final design combined step-by-step instructions, education, and document collection to simplify what had been a complex approval process. At the same time, I built in strategic content to help owners understand the impact cancellations have on their rental performance—encouraging fewer cancellations overall. The result: a tool that reduced cancelation requests, cut frontline support costs, and gave owners the flexibility they needed.</p>
+                        <p class="text-body-base">I designed a self-serve cancellation flow for the responsive web Owner Account experience. Since booking cancellation rules differ across distribution partners like Airbnb and Vrbo, the solution needed to balance clarity, guidance, and compliance. The final design combined step-by-step instructions, education, and document collection to simplify what had been a complex approval process. At the same time, I built in strategic content to help owners understand the impact cancellations have on their rental performance—encouraging fewer cancellations overall.</p>
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Impact</h3>
-                        <p class="text-body-base">The new self-serve booking cancellation tool saw immediate adoption, with ~20%  of the cancellations completed by owners in the first month. Our data dashboard revealed significant drop-off rates in each successive step or section. Rather than signaling confusion, these drop-offs showed that owners were pausing to reconsider after understanding the consequences of canceling. In other words, the tool not only enabled self-service but also successfully influenced behavior, helping reduce unnecessary cancellations.</p>
+                        <p class="text-body-base">The new self-serve booking cancellation tool saw immediate adoption, with ~20%  of the cancellations completed by owners in the first month. Our data dashboard revealed significant drop-off rates in each successive step or section. Drop-off was good in this case, signaling that owners were pausing to reconsider canceling after understanding the consequences. In other words, the tool not only enabled self-service but also successfully influenced behavior, helping reduce unnecessary cancellations.</p>
                     </div>
                 </div>
                 <div class="case-details">
@@ -222,7 +222,7 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Solution</h3>
-                    <p class="text-body-base">Based on the test findings, I put a bigger spotlight on solutions that help owners save bookings, like offering a discount to a guest for an inconvenience. I also simplified the whole process by trimming down the amount of text on screen and linking to our Help Center and other resources.</p>
+                    <p class="text-body-base">Based on the test findings, I put a bigger spotlight on solutions that help owners preserve guest bookings, like offering a discount to a guest for an inconvenience. I also simplified the whole process by trimming down the amount of text on screen and linking to our Help Center and other resources.</p>
                 </div>
             </div>
         </section>
