Add scroll animations to evolve-inbox.html
- Include scroll-animations.js script for animation functionality
- Add scroll-animate class to hero content and media sections
- Apply animations to overview content sections (Overview, Problem, Solution, Impact)
- Add animations to Discovery and Solution section headers
- Match scroll animation behavior from index.html
- Create smooth fade-in and slide-up effects on scroll

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
                     <a class="project-card" href="transamerica-app.html">
-                        <div class="project-image" style="background: #FFE8B3; display: grid; place-items: center; height: 200px; border-radius: 10px; overflow: hidden;">
+                        <div class="project-image" style="background: #FFF6D4; display: grid; place-items: center; height: 200px; border-radius: 10px; overflow: hidden;">
                             <img src="assets/transamerica_app_thumbnail.png" alt="Project thumbnail" style="width: 30%; height: auto; display: block;"/>
                         </div>
                         <span class="project-badge">Launched</span>
