--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="hero-media" aria-hidden="true">
                     <div class="media-placeholder">
-                        <img src="assets/images/placeholder_headshot.png" alt="Tracy Lai" />
+                        <img src="assets/tcl_headshot.png" alt="Tracy Lai" />
                     </div>
                 </div>
             </div>
