Update ai-design.html and other modifications
- Remove FigmaMake.png image and caption from ai-design.html
- Fix style tag syntax error
- Update evolve-owner-account.html image styling
- Include any other modified assets

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="hero-content">
                     <span class="launch-badge">Launched</span>
-                    <h2 class="text-heading-2">Streamlining Owner – Guest Communication with Inbox</h2>
+                    <h2 class="text-heading-2">Inbox: Streamlining Owner-Guest Communication</h2>
                 </div>
                 <div class="hero-media">
                     <div class="hero-placeholder">
