--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <span class="project-badge">Launched</span>
                             <span class="project-badge project-badge--secondary">+ Case study</span>
                         </div>
-                        <h3 class="text-heading-4">Streamlining Owner–Guest Communication with Inbox</h3>
+                        <h3 class="text-heading-4">Inbox: Streamlining Owner-Guest Communication</h3>
                         <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
                     <a class="project-card" href="evolve-self-serve-cancellations.html">
@@ -119,7 +119,7 @@
                             <img src="assets/gm_app_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
                         <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Designing a Powerful Native Mobile & Tablet Sales Tool Application</h3>
+                        <h3 class="text-heading-4">Empowering Sales Teams with a Native Mobile Tool</h3>
                         <p class="text-body-base">UX/UI designer <span style="color: var(--color-grey);">•</span> General Motors (GM)</p>
                     </a>
                 </div>
