--- a/gm-dealer-sales-assistant-app.html
+++ b/gm-dealer-sales-assistant-app.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="hero-content">
                     <span class="launch-badge">Launched</span>
-                    <h2 class="text-heading-2">Dealer Sales Assistant™:<br>Designing a powerful native mobile & tablet sales tool application</h2>
+                    <h2 class="text-heading-2">Dealer Sales Assistant™:<br>Empowering Sales Teams with a Native Mobile Tool</h2>
                 </div>
                 <div class="hero-media">
                     <div class="hero-placeholder">
