--- a/extra.html
+++ b/extra.html
@@ -75,6 +75,8 @@
         </div>
     </footer>
     <script src="scripts/main.js"></script>
+    <!-- 100% privacy-first analytics -->
+    <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
 
