--- a/gm-dealer-sales-assistant-app.html
+++ b/gm-dealer-sales-assistant-app.html
@@ -324,6 +324,8 @@
             <p class="text-body-sm">&copy; 2025 TC Design. All rights reserved.</p>
         </div>
     </footer>
+    <!-- 100% privacy-first analytics -->
+    <script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
 
