--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -46,7 +46,10 @@
         <section class="case-hero">
             <div class="container">
                 <div class="hero-content">
-                    <span class="launch-badge">Launched</span>
+                    <div class="project-badges">
+                        <span class="project-badge">Launched</span>
+                        <span class="project-badge project-badge--secondary">+ Case study</span>
+                    </div>
                     <h2 class="text-heading-2">Inbox: Streamlining Owner-Guest Communication</h2>
                 </div>
                 <div class="hero-media">
